Fix corner gap on half rounded down screens
On certain mobile screens, the relative size of the corner triangles
gets rounded down to the lower pixel size. This causes a gap of just
under 1px in size. By scooting over all corners a pixel over the gap,
all screen sizes should see a neat corner.

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ footer::after {
 }
 
 main > section::before, header::before, footer::before {
-    top: 0;
+    top: -1px;
     left: 0;
     border-right: calc(var(--line-height) * 2) solid transparent;
     border-top: calc(var(--line-height) * 2) solid #fff;
@@ -143,7 +143,7 @@ footer::before {
 
 main > section::after, header::after, footer::after {
     right: 0;
-    bottom: 0;
+    bottom: -1px;
     border-left: calc(var(--line-height) * 2) solid transparent;
     border-bottom: calc(var(--line-height) * 2) solid #fff;
 }
